phone view and alignment of smlra text fixed

--- a/style.css
+++ b/style.css
@@ -166,13 +166,15 @@ iframe{
 
 @media only screen and (max-width: 900px) {
     .btext{
-      
-        position: absolute;
+        
+        position: relative;
         text-align: center;
         /* padding-left: 40% !important; */
         left: 0.5%;
         font-size: 120%;
-        
+        top: 1%;
+        padding-top: 25%;
+
     }
 
     
